--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   http:
   provider:
   shared_preferences: 
+  lottie:
+  url_launcher:
+  youtube_player_flutter:
+  flutter_inappwebview:
   
 
 dev_dependencies:
@@ -64,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
