Add new providers for images, videos, and articles; update user model and registration logic; enhance permissions and navigation

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.smart_content_recommendation_application"
+    namespace  "com.example.smart_content_recommendation_application"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
