Update URI, implement image download and file upload functionality, and modify dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,15 @@ dependencies:
   dio: 
   permission_handler: 
   path_provider: 
-  image_gallery_saver: ^2.0.3
+  flutter_dotenv: 
+  # image_gallery_saver: ^2.0.3
   riverpod:
   flutter_riverpod:
+  file_picker:
   chat_gpt_sdk:
     git:
       url: https://github.com/iampawan/Flutter-ChatGPT.git
-  flutter_dotenv: ^5.0.2
+  
       
   
 
@@ -80,6 +82,7 @@ flutter:
   assets:
     - assets/images/
     - assets/lottie/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
